--- a/src/Assets/scss/3-base/_helpers.scss
+++ b/src/Assets/scss/3-base/_helpers.scss
@@ -1,35 +1,33 @@
-a,a:link,a:visited,a:hover,a:focus,a:active{
+a,
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
   color: inherit;
   text-decoration: none;
 }
 
-.__lock{
+.__lock {
   overflow: hidden;
 }
 
-.container-fluid{
+.container-fluid {
   @include min-width($bp-ultrawide) {
     max-width: 1366px;
   }
 }
 
-.ou{
-  margin:.75rem 0 ;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  flex-flow: row;
- 
+.flex-1 {
+  flex: 1;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: $color-bg;
+}
 
-  span:nth-child(1),span:nth-child(3){
-    width: 100%;
-    height: 1px;
-    background-color: $color-border;
-  }
-  span:nth-child(2){
-    padding: 0 10px;
-    font-size: .8rem;
-    text-transform: uppercase;
-  }
+::-webkit-scrollbar-thumb {
+  background: #4a4867;
 }
