--- a/src/Assets/scss/3-base/_typography.scss
+++ b/src/Assets/scss/3-base/_typography.scss
@@ -1,63 +1,113 @@
 /**
  * Default font family, size and color
  */
- @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800&display=swap');
 
 body {
   font-family: $font-primary;
   font-size: $font-base-size;
-  color: $color-text;
   -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  line-height: 1.3125rem;
+  margin: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  line-height: 1.3; }
-h1 { font-size: 3.2rem; letter-spacing: -.1rem;font-weight: 700; }
-h2 { font-size: 2.9rem; letter-spacing: -.1rem; }
-h3 { font-size: 2.6rem; letter-spacing: -.1rem; }
-h4 { font-size: 2rem;font-weight: 600; }
-h5 { font-size: 1.4rem;font-weight: 600; }
-h6 { font-size: 1.1rem;font-weight: 400;  }
-
-
-@media (min-width: 550px) {
-  h1 { font-size: 3.8rem; }
-  h2 { font-size: 3.1875rem; }
-  h3 { font-size: 2.375rem; }
-  h4 { font-size: 1.75rem; }
-  h5 { font-size: 1.35rem; }
-  h6 { font-size: 1rem; }
+h1,
+.h1 {
+  font-size: 3rem;
+  line-height: 3.9375rem;
+  margin-top: 1.3125rem;
+  margin-bottom: 2.625rem;
+  font-weight: 600;
+}
+h2,
+.h2 {
+  font-size: 2.375rem;
+  line-height: 2.625rem;
+  margin-top: 1.3125rem;
+  margin-bottom: 1.3125rem;
+}
+h3,
+.h3 {
+  font-size: 1.9375rem;
+  line-height: 2.625rem;
+  margin-top: 1.3125rem;
+  margin-bottom: 0rem;
+}
+h4,
+.h4 {
+  font-size: 1.5625rem;
+  line-height: 2.625rem;
+  margin-top: 1.3125rem;
+  margin-bottom: 0rem;
+}
+h5,
+.h5 {
+  font-size: 1rem;
+  line-height: 1.3125rem;
+  margin-top: 1.3125rem;
+  margin-bottom: 0rem;
+}
+p,
+ul,
+ol,
+pre,
+table,
+blockquote {
+  margin-top: 0rem;
+  margin-bottom: 1.3125rem;
+}
+ul ul,
+ol ol,
+ul ol,
+ol ul {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
 }
 
-p {
-  margin-top: 0;
-  line-height: 1.3;
-  font-size: 0.93rem;
-  b{
-    font-weight: 600;
-  }
+/* Let's make sure all's aligned */
+hr,
+.hr {
+  border: 1px solid;
+  margin: -1px 0;
 }
-
-.p2{
+a,
+b,
+i,
+strong,
+em,
+small,
+code {
+  line-height: 0;
+}
+sub,
+sup {
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+.p2 {
   font-size: 1.1rem;
   line-height: 1.2;
   font-weight: 600;
-  color:$color-secondary;
+  color: $color-secondary;
 }
-.p3{
-  font-size: .75rem;
+.p3 {
+  font-size: 0.75rem;
   line-height: 1.2;
   font-weight: 400;
-  color:#A0A0A0;
+  color: #a0a0a0;
 }
 
-.over{
-  font-size: .75rem;
-  font-weight:normal;
-  letter-spacing:0.4px;
+.over {
+  font-size: 0.75rem;
+  font-weight: normal;
+  letter-spacing: 0.4px;
   text-transform: uppercase;
 }
