--- a/src/Assets/scss/5-layout/_header.scss
+++ b/src/Assets/scss/5-layout/_header.scss
@@ -29,6 +29,8 @@
   width: 100%;
   height: 30px;
   display: flex;
+  background-color: #1010102e;
+  border-bottom: 1px solid #00000017;
   font-family: $font-primary;
   position: relative;
 }
@@ -37,7 +39,8 @@
   top: 0px;
   width: 100%;
   height: 30px;
-  background-color: transparent;
+  background-color: #1010102e;
+  border-bottom: 1px solid #00000017;
   display: flex;
   position: relative;
 }
