--- a/src/Assets/scss/1-helpers/_variables.scss
+++ b/src/Assets/scss/1-helpers/_variables.scss
@@ -14,9 +14,13 @@ $bp-ultrawide: 1580px;
 
 $color-primary: #d41b3b !default;
 $color-secondary: #1a2e4c !default;
+$color-destaque: #5c1fbf !default;
+$color-texto: #6a6886 !default;
 $color-error: #f14668 !default;
 $color-bg: #211f39 !default;
 // Fonts
+
+$color-2: #26243e !default;
 
 $font-base-size: 16px !default;
 $font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
