--- a/src/Assets/scss/5-layout/_sidebar.scss
+++ b/src/Assets/scss/5-layout/_sidebar.scss
@@ -1,8 +1,8 @@
 .Sidebar {
   min-height: 100vh;
   width: 100px;
-  padding-top: 60px;
-  background-color: #26243e;
+  padding-top: 30px;
+  background-color: #1010102e;
 
   img {
     display: block;
