--- a/src/Assets/scss/5-layout/_tabela.scss
+++ b/src/Assets/scss/5-layout/_tabela.scss
@@ -10,7 +10,7 @@ table {
     color: #fff;
 
     span {
-      color: #6a6886;
+      color: $color-texto;
     }
   }
   tbody {
@@ -30,7 +30,6 @@ table {
         width: 40px;
         background-size: cover;
         background-position: center;
-        margin: 0 auto;
         border-radius: $border-radius;
       }
       .tag__post,
@@ -43,7 +42,7 @@ table {
         white-space: nowrap;
         vertical-align: baseline;
         border-radius: 0.25rem;
-        color: #6a6886;
+        color: $color-texto;
       }
       .tag__post {
         &.carrossel {
