--- a/src/Assets/scss/5-layout/_forms.scss
+++ b/src/Assets/scss/5-layout/_forms.scss
@@ -1,7 +1,7 @@
 ::placeholder,
 select:invalid,
 select option[value=""] {
-  color: #6a6886;
+  color: $color-texto;
   font-weight: 400;
 }
 
@@ -25,7 +25,7 @@ select {
   resize: none;
   font-weight: 600;
   background-color: #282642;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 4px;
   min-height: $inputHeight;
   align-items: center;
@@ -37,8 +37,8 @@ select {
 
   &:focus,
   &:active {
-    outline: none;
-    border: 1px solid $color-secondary;
+    outline: 1px solid transparent;
+    border: 1px solid $color-destaque;
   }
 
   &.parsley-error {
