--- a/src/Assets/scss/3-base/_helpers.scss
+++ b/src/Assets/scss/3-base/_helpers.scss
@@ -36,14 +36,15 @@ html {
   flex: 1;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 ::-webkit-scrollbar-track {
   background: $color-bg;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #4a4867;
+  background: $color-primary;
+  border-radius: 12px;
 }
 
 ul {
@@ -52,12 +53,12 @@ ul {
     width: 100%;
 
     li {
-      border-top: 1px dashed #35334d;
+      border-top: 1px dashed #e8e8e8;
       height: 60px;
     }
 
     li:nth-child(odd) {
-      background-color: hsla(245, 22%, 21%, 0.6);
+      background-color: rgba(0, 0, 0, 0.02);
     }
   }
 }
@@ -67,6 +68,6 @@ ul {
     background-color: rgba(0, 0, 0, 0);
   }
   to {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.85);
   }
 }
