--- a/src/Assets/scss/5-layout/_header.scss
+++ b/src/Assets/scss/5-layout/_header.scss
@@ -27,21 +27,20 @@
 
 .Title-Bar {
   top: 0px;
-  width: 100%;
+  width: calc(100% - 77px);
+  margin-left: auto;
   height: 30px;
   display: flex;
-  background-color: #1010102e;
-  border-bottom: 1px solid #00000017;
-  font-family: $font-primary;
+  background-color: $color-white;
   position: relative;
 }
 
 .Title-Bar-inactive {
   top: 0px;
-  width: 100%;
+  width: calc(100% - 77px);
+  margin-left: auto;
   height: 30px;
-  background-color: #1010102e;
-  border-bottom: 1px solid #00000017;
+  background-color: $color-white;
   display: flex;
   position: relative;
 }
@@ -79,7 +78,6 @@
   justify-content: center;
   display: flex;
   font-size: 13px;
-  color: #616161;
   font-weight: 400;
 }
 
