--- a/src/Assets/scss/4-components/_box.scss
+++ b/src/Assets/scss/4-components/_box.scss
@@ -1,6 +1,6 @@
 .box {
   padding: 30px;
-  background-color: $color-2;
+  background-color: $color-menu;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
 }
