--- a/src/Assets/scss/4-components/_carregando.scss
+++ b/src/Assets/scss/4-components/_carregando.scss
@@ -21,10 +21,10 @@
 
     h4,
     .p3 {
-      color: white;
+      color: $color-primary;
 
       span {
-        color: $color-destaque;
+        color: $color-tertiary;
       }
     }
     .carregando__barra {
@@ -36,7 +36,7 @@
       position: relative;
 
       .carregando__progresso {
-        background-color: $color-destaque;
+        background-color: $color-tertiary;
         position: absolute;
         bottom: 0;
         left: 0;
