--- a/src/Assets/scss/index.scss
+++ b/src/Assets/scss/index.scss
@@ -22,6 +22,7 @@
 @import "5-layout/header";
 @import "5-layout/footer";
 @import "5-layout/sidebar";
+@import "5-layout/searchbar";
 @import "5-layout/forms";
 @import "5-layout/tabela";
 
