--- a/src/Assets/scss/5-layout/_searchbar.scss
+++ b/src/Assets/scss/5-layout/_searchbar.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   min-width: 225px;
   width: 16.5vw;
-  background-color: #fff;
+  background-color: #f8f9fd;
   padding: 0 24px;
   color: $color-secondary;
 
