--- a/src/Assets/scss/5-layout/_sidebar.scss
+++ b/src/Assets/scss/5-layout/_sidebar.scss
@@ -6,9 +6,8 @@
   position: relative;
   flex-wrap: wrap;
   align-items: center;
-  background-color: $color-tertiary;
+  background-color: $color-menu;
   z-index: 3;
-  border-radius: 0 15px 0 0;
 
   img {
     display: block;
