--- a/src/Assets/scss/1-helpers/_variables.scss
+++ b/src/Assets/scss/1-helpers/_variables.scss
@@ -12,13 +12,14 @@ $bp-ultrawide: 1580px;
 
 // Colors
 
-$color-primary: #8f9eb1 !default;
+$color-primary: #0b1829 !default;
 $color-white: #fff !default;
 $color-secondary: #000821 !default;
-$color-tertiary: #0f70e0 !default;
+$color-tertiary: #08b47d !default;
 $color-error: #f14668 !default;
-$color-bg: #f5f6fa !default;
-$color-menu: #fff !default;
+$color-bg: #0b1829 !default;
+$color-menu: #ffffff !default;
+$color-border: #ededed !default;
 // Fonts
 
 $color-2: #26243e !default;
@@ -31,8 +32,8 @@ $font-primary: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 // Miscellaneous
 $image-path: "/assets/images";
 
-$inputHeight: 44px !default;
+$inputHeight: 34px !default;
 $inputHeightMobile: 50px !default;
 
-$border-radius: 10px !default;
-$box-shadow: 0 0 15px 6px #edeff3a9 !default;
+$border-radius: 3px !default;
+$box-shadow: 0 0 15px 6px darken($color-bg, 3%) !default;
