--- a/src/Assets/scss/4-components/_box.scss
+++ b/src/Assets/scss/4-components/_box.scss
@@ -1,6 +1,36 @@
 .box {
-  padding: 30px;
   background-color: $color-menu;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+
+  .box__titulo {
+    padding: 20px 55px 0px;
+    border-bottom: 1px solid $color-border;
+
+    h2 {
+      color: $color-secondary;
+      margin-top: 0;
+      padding-left: 15px;
+      position: relative;
+      display: block;
+      font-weight: 700;
+      z-index: 1;
+
+      &::before {
+        content: "#";
+        color: $color-tertiary;
+        display: flex;
+        font-size: 1.4em;
+        position: absolute;
+        left: -20px;
+        width: 30px;
+        top: 0px;
+        bottom: 0;
+        z-index: -1;
+      }
+    }
+  }
+  .box__conteudo {
+    padding: 30px 55px 45px;
+  }
 }
