--- a/src/Assets/scss/5-layout/_header.scss
+++ b/src/Assets/scss/5-layout/_header.scss
@@ -31,7 +31,7 @@
   margin-left: auto;
   height: 30px;
   display: flex;
-  background-color: darken($color-bg, 7%);
+  background-color: $color-primary;
   position: relative;
 }
 
@@ -40,7 +40,7 @@
   width: 100%;
   margin-left: auto;
   height: 30px;
-  background-color: darken($color-bg, 7%);
+  background-color: $color-primary;
   display: flex;
   position: relative;
 }
