--- a/src/Assets/scss/5-layout/_sidebar.scss
+++ b/src/Assets/scss/5-layout/_sidebar.scss
@@ -1,15 +1,15 @@
 .Sidebar {
-  min-height: 100vh;
+  height: calc(100vh - 30px);
   width: 77px;
   padding-bottom: 60px;
   display: flex;
   position: relative;
   flex-wrap: wrap;
   align-items: center;
-  background-color: $color-menu;
+  background-color: $color-primary;
   z-index: 3;
 
-  img {
+  .logo {
     display: block;
     margin: 0 auto;
     position: absolute;
@@ -77,21 +77,11 @@
         }
 
         &.active {
-          background-color: rgba(white, 0.08);
+          background-color: white;
+          border-radius: 25px 0 0 25px;
 
           svg {
-            fill: $color-white;
-          }
-
-          &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 3px;
-            background-color: white;
-            border-radius: 0 5px 5px 0;
+            fill: $color-primary;
           }
         }
       }
