--- a/src/Assets/scss/3-base/_typography.scss
+++ b/src/Assets/scss/3-base/_typography.scss
@@ -2,7 +2,7 @@
  * Default font family, size and color
  */
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
 
 body {
   font-family: $font-primary;
