--- a/src/Assets/scss/4-components/_box.scss
+++ b/src/Assets/scss/4-components/_box.scss
@@ -3,34 +3,17 @@
   border-radius: $border-radius;
   box-shadow: $box-shadow;
 
+  h6 {
+    text-transform: uppercase;
+    padding: 17px 25px 0px;
+    color: $color-primary;
+  }
+
   .box__titulo {
-    padding: 20px 55px 0px;
+    padding: 20px 25px 0px;
     border-bottom: 1px solid $color-border;
-
-    h2 {
-      color: $color-secondary;
-      margin-top: 0;
-      padding-left: 15px;
-      position: relative;
-      display: block;
-      font-weight: 700;
-      z-index: 1;
-
-      &::before {
-        content: "#";
-        color: $color-tertiary;
-        display: flex;
-        font-size: 1.4em;
-        position: absolute;
-        left: -20px;
-        width: 30px;
-        top: 0px;
-        bottom: 0;
-        z-index: -1;
-      }
-    }
   }
   .box__conteudo {
-    padding: 30px 55px 45px;
+    padding: 30px 25px 45px;
   }
 }
