--- a/src/Assets/scss/5-layout/_searchbar.scss
+++ b/src/Assets/scss/5-layout/_searchbar.scss
@@ -1,10 +1,23 @@
 .Searchbar {
-  height: 100vh;
-  min-width: 225px;
-  width: 16.5vw;
-  background-color: #f8f9fd;
-  padding: 0 24px;
+  height: calc(100vh - 30px);
+  min-width: 0;
+  width: 0;
+  background-color: $color-menu;
+  padding: 0;
+  overflow: hidden;
   color: $color-secondary;
+  z-index: 1;
+  border-radius: 25px 0 0 0;
+
+  &.active {
+    min-width: 270px;
+    width: 16.5vw;
+    padding: 0 24px;
+
+    & ~ .Content {
+      border-radius: 0;
+    }
+  }
 
   .searchbar__form {
     flex: 1;
@@ -13,6 +26,20 @@
 
     button {
       margin-top: 1rem;
+    }
+  }
+
+  h3 {
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 5px;
+      right: 0;
+      width: 100%;
+      height: 8px;
+      background-color: $color-secondary;
+      opacity: 0.33;
+      z-index: -1;
     }
   }
 }
